# shop-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  start.bat  test_api_standards.py
.claude/: settings.local.json
app/: main.py
app/api/: __init__.py  auth.py  customer_levels.py  customers.py  deps.py  prices.py  products.py
app/core/: config.py  database.py  exceptions.py  handlers.py  response.py  security.py  snowflake.py
app/dao/: user_dao.py
app/models/: __init__.py  base.py  customer.py  customer_level.py  product.py  product_level_price.py  user.py
app/schemas/: __init__.py  customer.py  customer_level.py  price.py  product.py  user.py
app/service/: user_service.py
docs/: API_STANDARDS.md  MIGRATION_SUMMARY.md  REQUIREMENTS.md  REQUIREMENTS_UPDATE_LOG.md  SERVICE_GUIDE.md  SQL_DESIGN.md  database_schema.sql
